# opengauge

./: .gitignore  .project  FAQ.md  FixMyCar.ioc  OBDuino32K.md  OBDuinoDiagram.md  OBDuinoInterface.md  README.md  Readme.md
Core/Inc/: stm32l1xx_it.h  usart.h
Core/Src/: fixmycar.c  main.c  usart.c
config/: config.txt  dashboard.desktop  start.sh
dashboard/: CMakeLists.txt  ISO9141.cpp  ISO9141.h  MILCode.h  MainWindow.cpp  MainWindow.h  OBDIIWorker.cpp  OBDIIWorker.h  README.md  SkinnyQGridLayout.cpp  SkinnyQGridLayout.h  main.cpp  port.cpp  style.css
dashboard/src/: OBDIIWorker.cpp  OBDIIWorker.h  PID.h  main.cpp  main.qml  port.cpp  port.h
embedded/: .cproject  .mxproject  32L100CDISCOVERY.xml  FixMyCar Debug.cfg  STM32L100RCTx_FLASH.ld
embedded/Core/Inc/: main.h  stm32l1xx_hal_conf.h
embedded/Core/Src/: stm32l1xx_it.c
mpguino/: MPGUINO13.sch  main.pde  mpguino.cpp  mpguino.pde
obduino/: obduino.pde
obduino32K/: obduino32K.pde  obduino32K.txt
obduino32K_graphic/libraries/FileLogger/: FileLogger.h
obduino32K_graphic/libraries/OBDuinoLCD_LiquidCrystal/: OBDuinoLiquidCrystal.h
obduino32K_graphic/libraries/OBDuinoLCD_ST7735/: OBDuinoST7735.cpp  OBDuinoST7735.h
pi/: .gitignore  CMakeLists.txt  README.md  checkForUpdates.sh
pi/src/: DashboardApplication.cpp  DashboardApplication.h  ISO9141.cpp  ISO9141.h  MILCode.cpp  MILCode.h  OBDIIWorker.cpp  OBDIIWorker.h  fakeWiringPi.cpp  fakeWiringPi.h  main.cpp  main.qml  port.cpp  port.h
results/: all_pids_motor_idle.txt  idle_to_engine_start.txt  supported_pids.txt
trunk/: obduino32K.pde
trunk/mpguino/: MPGUINO.brd  MPGUINO.sch  MPGUINO13.brd  mpguino.cpp  mpguino.pde
trunk/obduino/: obduino.pde  obduino.txt
trunk/obduino32K/: obduino32K.pde  obduino32K.txt
trunk/obduino32K_graphic/: obduino32K_graphic.txt
wiki/: FAQ.wiki  MPGuinoReferenceSchematicV1.wiki  OBDuino.wiki  OBDuino32K.wiki  OBDuinoDiagram.wiki  OBDuinoInterface.wiki
(+36 files in other folders)
